s040-api-notificacion-feature-homologacion-canvia-mdp/s040-api-notificacion-feature-homologacion-canvia-mdp/toCluster/02_deployment.yaml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: notificacion-mdp-dev
  name: notificacion-mdp-dev
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: notificacion-mdp-dev
  template:
    metadata:
      labels:
        app: notificacion-mdp-dev
    spec:
      containers:
      - image: docker-registry.default.svc:5000/notificacion-mdp-dev/notificacion-mdp-dev:latest
        imagePullPolicy: IfNotPresent
        name: notificacion-mdp-dev
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: 250m
            memory: 768Mi
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
  triggers:
  - type: ConfigChange
  - type: ImageChange
    imageChangeParams:
      automatic: true
      containerNames:
      - notificacion-mdp-dev
      from:
        kind: ImageStreamTag
        name: notificacion-mdp-dev:latest
        namespace: notificacion-mdp-dev
