s040-api-notificacion-feature-homologacion-canvia-mdp/s040-api-notificacion-feature-homologacion-canvia-mdp/toCluster/03_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: notificacion-mdp-dev
  name: notificacion-mdp-dev
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: notificacion-mdp-dev
