s040-api-notificacion-feature-homologacion-canvia-mdp/s040-api-notificacion-feature-homologacion-canvia-mdp/toCluster/04_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: notificacion-mdp-dev
  name: notificacion-mdp-dev
spec:
  host: notificacion-mdp-dev.ocdev.ansc.gob.pe
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: notificacion-mdp-dev
    weight: 100
  wildcardPolicy: None
